--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "natsort>=8.4.0",
     "numpy>=2.2.6",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.1",
     "weasyprint>=65.1",
 ]
