--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,13 @@ dev = [
 
 [tool.pylint.main]
 ignore = [ ".venv" ]
+
+[tool.mypy]
+# check_untyped_defs = true
+# disallow_any_generics = true
+# disallow_incomplete_defs = true
+# no_implicit_optional = true
+# no_implicit_reexport = true
+# strict_equality = true
+# warn_redundant_casts = true
+# warn_unused_ignores = true
