--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [project]
-name = "lighting-paperwork"
+name = "lighting_paperwork"
 version = "0.1.0"
-description = "Add your description here"
+description = "Generate lighting paperwork from Vectorworks XML"
 readme = "README.md"
+license = "GPL-3.0-only"
 requires-python = ">=3.10"
 dependencies = [
     "jinja2>=3.1.6",
@@ -18,6 +19,13 @@ dev = [
     "pandas-stubs>=2.3.0.250703",
     "types-openpyxl>=3.1.5.20250602",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[project.scripts]
+lighting-paperwork = "lighting_paperwork.generate_paperwork:main"
 
 [tool.pylint.main]
 ignore = [ ".venv" ]
