--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "lighting_paperwork"
 version = "0.1.0"
 description = "Generate lighting paperwork from Vectorworks XML"
+authors = [{name = "Reid Sox-Harris", email="reid@soxharris.com>"}]
 readme = "README.md"
 license = "GPL-3.0-only"
 requires-python = ">=3.10"
@@ -13,6 +14,9 @@ dependencies = [
     "pandas>=2.3.1",
     "weasyprint>=65.1",
 ]
+
+[project.urls]
+repository = "https://github.com/eosti/k3ng-rotator-python"
 
 [dependency-groups]
 dev = [
