--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,23 @@
 [project]
 name = "lighting_paperwork"
-version = "0.1.0"
+version = "0.1.3"
 description = "Generate lighting paperwork from Vectorworks XML"
-authors = [{name = "Reid Sox-Harris", email="reid@soxharris.com>"}]
+authors = [{name = "Reid Sox-Harris", email="reid@soxharris.com"}]
 readme = "README.md"
 license = "GPL-3.0-only"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "jinja2>=3.1.6",
     "natsort>=8.4.0",
     "numpy>=2.2.6",
     "openpyxl>=3.1.5",
     "pandas>=2.3.1",
-    "weasyprint>=65.1",
+    "rich>=14.1.0",
+    "weasyprint>=66",
 ]
 
 [project.urls]
-repository = "https://github.com/eosti/k3ng-rotator-python"
+repository = "https://github.com/eosti/lighting-paperwork"
 
 [dependency-groups]
 dev = [
@@ -27,6 +28,9 @@ dev = [
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.package-data]
+"*" = ["*.py", "*.tpl"]
 
 [project.scripts]
 lighting-paperwork = "lighting_paperwork.generate_paperwork:main"
